--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "custom-error-test-helper",
   "version": "1.0.0",
   "description": "Library for testing Solidity custom errors with Truffle/Ganache.",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./build && tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check": "tsc --pretty --noEmit"
   },
   "repository": {
     "type": "git",
-    "url": "github.com/TomiOhl/custom-error-test-helper"
+    "url": "git+https://github.com/TomiOhl/custom-error-test-helper.git"
   },
   "keywords": [
     "solidity",
@@ -18,5 +20,15 @@
     "ganache"
   ],
   "author": "Tomi_Ohl",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^4.3.6",
+    "ethers": "^5.7.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.8.2"
+  }
 }
